force-app/main/default/objects/Contact/fields/BirthdateText__c.field-meta.xml
<CustomField>
    <fullName>BirthdateText__c</fullName>
    <description>This field is being used to store the birth date converted to a &apos;Text&apos; data type.</description>
    <label>BirthdateText</label>
    <length>20</length>
    <type>Text</type>
</CustomField>