force-app/main/default/objects/Contact/fields/Contact_type__c.field-meta.xml
<CustomField>
    <fullName>Contact_type__c</fullName>
    <label>Contact type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QFR Primary Contact</fullName>
            </value>
            <value>
                <fullName>Food and Nutrition Contact</fullName>
            </value>
            <value>
                <fullName>Home Care Contact</fullName>
            </value>
            <value>
                <fullName>Residential Care Contact</fullName>
            </value>
            <value>
                <fullName>Financial Reporting Contacts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>