force-app/main/default/objects/Contact/fields/Correction__c.field-meta.xml
<CustomField>
    <fullName>Correction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this is a correction and not a change</description>
    <label>Correction</label>
    <type>Checkbox</type>
</CustomField>