force-app/main/default/objects/Contact/fields/DM_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Contact_Type__c</fullName>
    <description>Used to identify whether a contact is either a Contact or a User.</description>
    <inlineHelpText>Enter &quot;user&quot; if the contact is from the FA addrtabessbook tab or enter &quot;Contact&quot; if the contact is from the current contacts tab of the FA Addressbook excel.</inlineHelpText>
    <label>DM Contact Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>