force-app/main/default/objects/Contact/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <description>Email body for bulk upload notification.</description>
    <label>Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>