force-app/main/default/objects/Contact/fields/Email_Bounce_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounce_Date__c</fullName>
    <formula>EmailBouncedDate</formula>
    <label>Email Bounced Date</label>
    <type>DateTime</type>
</CustomField>