force-app/main/default/objects/Contact/fields/Email_Bounce_Reason__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounce_Reason__c</fullName>
    <formula>EmailBouncedReason</formula>
    <label>Email Bounce Reason</label>
    <type>Text</type>
</CustomField>