force-app/main/default/objects/Contact/fields/GPMS_myGov_Vanguard_Id__c.field-meta.xml
<CustomField>
    <fullName>GPMS_myGov_Vanguard_Id__c</fullName>
    <description>Used for storing mygov/vanguard Id</description>
    <externalId>true</externalId>
    <label>myGov/Vanguard Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>