force-app/main/default/objects/Contact/fields/GPMS_PortalRegistrationType__c.field-meta.xml
<CustomField>
    <fullName>GPMS_PortalRegistrationType__c</fullName>
    <description>differentiate different type of portal registration</description>
    <label>Portal registration type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospective</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>