force-app/main/default/objects/Contact/fields/GPMS_Self_registration_code__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Self_registration_code__c</fullName>
    <description>Code used for verifying portal users</description>
    <label>Self registration code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>