force-app/main/default/objects/Contact/fields/GPMS_Siebel_ID__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Siebel_ID__c</fullName>
    <description>Siebel ID for data migration</description>
    <externalId>true</externalId>
    <label>Siebel ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>