force-app/main/default/objects/Contact/fields/Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Integration_ID__c</fullName>
    <formula>&apos;CON&apos;+&apos;-&apos;+if(ISBLANK(TEXT( Oracle_ID__c )),Contact_ID__c,TEXT( Oracle_ID__c ))</formula>
    <label>Integration ID</label>
    <type>Text</type>
</CustomField>