force-app/main/default/objects/Contact/fields/Is_this_contact_a_Key_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Is_this_contact_a_Key_Personnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this contact a Key Personnel?</label>
    <type>Checkbox</type>
</CustomField>