force-app/main/default/objects/Contact/fields/IsFinancial_Reporting_Contact__c.field-meta.xml
<CustomField>
    <fullName>IsFinancial_Reporting_Contact__c</fullName>
    <formula>IF( RecordType.Name==&apos;Financial Contact QFR ACFR&apos; , true, false)</formula>
    <label>IsFinancial Reporting Contact</label>
    <type>Checkbox</type>
</CustomField>