force-app/main/default/objects/Contact/fields/IsPortalUser__c.field-meta.xml
<CustomField>
    <fullName>IsPortalUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to differentiate portal contacts from other contacts</description>
    <label>Is Portal User</label>
    <type>Checkbox</type>
</CustomField>