force-app/main/default/objects/Contact/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <description>Oracle ID used for migration only. Read-only thereafter.</description>
    <externalId>true</externalId>
    <label>Oracle ID</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>