force-app/main/default/objects/Contact/fields/PreviousReportingPeriodDueDt__c.field-meta.xml
<CustomField>
    <fullName>PreviousReportingPeriodDueDt__c</fullName>
    <description>This field is displayed in email template for QI Service Role Users</description>
    <label>PreviousReportingPeriodDueDt</label>
    <type>Date</type>
</CustomField>