force-app/main/default/objects/Contact/fields/PreviousReportingPeriodName__c.field-meta.xml
<CustomField>
    <fullName>PreviousReportingPeriodName__c</fullName>
    <description>This field is used for displaying the Reporting Period Name to QI Service users in Email Reminders</description>
    <label>PreviousReportingPeriodName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>