force-app/main/default/objects/Contact/fields/Search_String__c.field-meta.xml
<CustomField>
    <fullName>Search_String__c</fullName>
    <formula>FirstName + &apos; &apos;+LastName +&apos; &apos;+IF(DAY(Birthdate)&lt;10,&apos;0&apos;,&apos;&apos;) + TEXT(DAY(Birthdate))+&apos;/&apos;+CASE(MONTH(Birthdate),1,&apos;Jan&apos;,2,&apos;Feb&apos;,3,&apos;Mar&apos;,4,&apos;Apr&apos;,5,&apos;May&apos;,6,&apos;Jun&apos;,7,&apos;Jul&apos;,8,&apos;Aug&apos;,9,&apos;Sep&apos;,10,&apos;Oct&apos;,11,&apos;Nov&apos;,12,&apos;Dec&apos;,&quot;&quot;)+&apos;/&apos;+TEXT(YEAR(Birthdate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search String</label>
    <type>Text</type>
</CustomField>