force-app/main/default/objects/Contact/fields/Second_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_Name__c</fullName>
    <description>Second/middle name of contact</description>
    <label>Second Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>