force-app/main/default/objects/Contact/fields/Self_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Self_Registration_Status__c</fullName>
    <description>Used for determining if the user has completed verification</description>
    <label>Self Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Verified</fullName>
                <default>true</default>
                <label>Not Verified</label>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>