force-app/main/default/objects/Contact/fields/ServiceNames__c.field-meta.xml
<CustomField>
    <fullName>ServiceNames__c</fullName>
    <description>This field is used for displaying the Services names to QI Service users in Email Reminders</description>
    <label>ServiceNames</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>