force-app/main/default/objects/Contact/recordTypes/Benchmarker_Contact.recordType-meta.xml
<RecordType>
    <fullName>Benchmarker_Contact</fullName>
    <active>true</active>
    <label>Benchmarker Contact</label>
</RecordType>