force-app/main/default/objects/Contact/recordTypes/Financial_Contact_QFR_ACFR.recordType-meta.xml
<RecordType>
    <fullName>Financial_Contact_QFR_ACFR</fullName>
    <active>true</active>
    <label>Financial Contact QFR ACFR</label>
</RecordType>