force-app/main/default/objects/Contact/recordTypes/GPMS_Contact.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Contact</fullName>
    <active>true</active>
    <label>GPMS Contact</label>
</RecordType>