force-app/main/default/objects/Contact/recordTypes/Point_of_Contact.recordType-meta.xml
<RecordType>
    <fullName>Point_of_Contact</fullName>
    <active>true</active>
    <label>Point of Contact</label>
</RecordType>