force-app/main/default/objects/Contact/validationRules/VR01_CON_FirstName.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_CON_FirstName</fullName>
    <active>true</active>
    <description>To check if first name is provided</description>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name is mandatory</errorMessage>
</ValidationRule>