force-app/main/default/objects/Contact/validationRules/VR04_CON_DOB.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_CON_DOB</fullName>
    <active>true</active>
    <description>A contact must be over 18</description>
    <errorConditionFormula>ADDMONTHS(Birthdate,216) &gt; Today()</errorConditionFormula>
    <errorDisplayField>Birthdate</errorDisplayField>
    <errorMessage>A contact must be over 18</errorMessage>
</ValidationRule>