force-app/main/default/objects/Contact/validationRules/VR12_CON_Email_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>VR12_CON_Email_Changed</fullName>
    <active>true</active>
    <description>Ensures a populated email cannot be changed to be blank.</description>
    <errorConditionFormula>AND(ISCHANGED(Email), ISBLANK(Email))</errorConditionFormula>
    <errorMessage>Portal User must have an email address to receive system notifications</errorMessage>
</ValidationRule>