force-app/main/default/objects/Contact/listViews/Benchmarker_Contact.listView-meta.xml
<ListView>
    <fullName>Benchmarker_Contact</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>GPMS_Portal_Role__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Benchmarker_Contact</value>
    </filters>
    <label>Benchmarker Contacts</label>
</ListView>